etc/iptables/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Nov 17 12:53:12 2024
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 224.0.0.0/4 -j ACCEPT
-A INPUT -d 224.0.0.0/4 -j ACCEPT
-A INPUT -s 240.0.0.0/5 -j ACCEPT
-A INPUT -m pkttype --pkt-type multicast -j ACCEPT
-A INPUT -m pkttype --pkt-type broadcast -j ACCEPT
COMMIT
# Completed on Sun Nov 17 12:53:12 2024
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Nov 17 12:53:12 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.2.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -o eth0.4 -j MASQUERADE
-A POSTROUTING -o eth0.44 -j MASQUERADE
COMMIT
# Completed on Sun Nov 17 12:53:12 2024
